--- a/res/xml/gesture.xml
+++ b/res/xml/gesture.xml
@@ -30,4 +30,10 @@
         android:summary="@string/pixel_gesture_summary"
         android:fragment="com.aosip.owlsnest.gesture.PixelGestureHolder" />
 
+     <com.aosip.support.preference.SystemSettingSwitchPreference
+        android:key="three_finger_gesture"
+        android:title="@string/three_finger_gesture"
+        android:summary="@string/three_finger_gesture_summary"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
